Documentacion: manual ejecucion y integracion
- Arregladas portadas
- Correccion ortografia

--- a/doc/desarrollo-problema-parity.tex
+++ b/doc/desarrollo-problema-parity.tex
@@ -1,3 +1,4 @@
+\label{desarrollo-parity}
 En esta sección vamos a configurar un sencillo problema de programación genética conocido por la comunidad por el nombre de Parity, el objetivo de este problema de programación genética es encontrar un programa que produzca un valor de la paridad par booleana dadas n entradas booleanas independientes. Por lo general, se utilizan 6 entradas booleanas (Parity-6), y el objetivo es que coincida con el valor del bit de paridad para cada una de las entradas de 2 elevado a 6 = 64 posibles.
 
 Si queremos ejecutar este problema en ECJ debemos definir 3 cosas, una clase que represente el problema y la cual pueda evaluar los individuos, otra clase que represente la paridad y ayude a la transferencia de esta entre individuos de la población y por \'ultimo el fichero de par\'ametros de ECJ.
