--- a/doc/main.tex
+++ b/doc/main.tex
@@ -88,16 +88,16 @@
 		\input{manual-importar-a-ide.tex}
 	\section{Compilaci\'on}
 		\input{manual-compilacion.tex}
+	\section{Ejecucion}\label{ejecucion}
+		\input{manual-ejecucion.tex}
+	\section{Ejecutar un problema de ECJ en Hadoop}
+		\input{manual-integracion.tex}
 
-\chapter{Trabajos futuros}
-
+\chapter{Trabajo futuro}
+	\input{trabajo-futuro.tex}
+	
 \chapter{Conclusiones}
-Esta implementación multihilo, se ve limitada a la cantidad de núcleos de procesamiento de una solo m\'maquina, pero si utilizamos la integración con Hadoop
-
-Aunque con las mejoras no tenia mucho sentido la integración por no mejorar a 8 hilos, tras las mejoras tiene sentido utilizarla cuando tenemos poblaciones grandes con individuos cuya evaluación no es costosa
-
-
-\chapter{Anexo I. C\'odigo fuente}
+	\input{conclusiones.tex}
 
 \bibliografia{bibliografia}
 
