--- a/doc/manual-obtencion.tex
+++ b/doc/manual-obtencion.tex
@@ -1,8 +1,6 @@
-El primer paso para la utilización de la solución implementada, no puede ser otro que obtenerla. Con el fin de que la comunidad pueda conseguirla sin problema, se ha creado un repositorio publico desde donde se puede descargar.
+El primer paso para la utilización de la solución implementada, no puede ser otro que obtenerla. Con el fin de que la comunidad pueda conseguirla sin problema, se ha creado un repositorio p\'ublico desde donde se puede descargar.
 
-El repositorio est\'a localizado en la conocida p\'agina por los desarrolladores GitHub (\url{https://github.com}), en ella se encuentran numerosos proyectos de código abierto y en la cual se ha almacenado este.
-
-Todos los proyectos almacenados en esta p\'agina hacen uso de una herramienta de control de versionado llamada Git, la cual hemos también utilizado en este proyecto.
+El repositorio est\'a localizado en la conocida p\'agina por los desarrolladores GitHub (\url{https://github.com}), en ella se encuentran numerosos proyectos de código abierto. Todos los proyectos almacenados en esta p\'agina hacen uso de una herramienta de control de versionado llamada Git, esta herramienta ha sido utilizada en este proyecto y su utilizaci\'on se explica mas adelante.
 
 \insertaraclaracion{?`Qu\'e es Git?}{
 	\qquad Es un software de control de versiones diseñado por Linus Torvalds, pensando en la eficiencia y la confiabilidad del mantenimiento de versiones de aplicaciones cuando estas tienen un gran número de archivos de código fuente. Hay algunos proyectos de mucha relevancia que ya usan Git, en particular, el grupo de programación del núcleo Linux.
@@ -11,13 +9,13 @@ Todos los proyectos almacenados en esta p\'agina hacen uso de una herramienta de
 		\item Fuerte apoyo al desarrollo no lineal, por ende rapidez en la gestión de ramas y mezclado de diferentes versiones.
 		\item Gestión distribuida. Git le da a cada programador una copia local del historial del desarrollo entero, y los cambios se propagan entre los repositorios locales. 
 		\item Los almacenes de información pueden publicarse por HTTP, FTP, rsync o mediante un protocolo nativo, ya sea a través de una conexión TCP/IP simple o a través de cifrado SSH.				\item Los repositorios Subversion y svk se pueden usar directamente con git-svn.
-%		\item Gestión eficiente de proyectos grandes.
+		\item Gestión eficiente de proyectos grandes.
 	\end{itemize}
 }
 
-El proyecto se puede encontrar a través del buscador del sitio escribiendo ''ecj\_hadoop", o accediendo directamente al repositorio siguiendo esta dirección: \url{https://github.com/dlanza1/ecj_hadoop} . Una vez en el repositorio, el proyecto se puede obtener de dos formas, una es pulsando en el botón "Download ZIP" (situado en la columna de la derecha), y una vez descargado descomprimir el fichero, y la otra es clonar el repositorio con Git (crear un repositorio igual de forma local).
+El proyecto se puede encontrar a través del buscador del sitio escribiendo ''ecj\_hadoop", o accediendo directamente al repositorio siguiendo esta dirección: \url{https://github.com/dlanza1/ecj_hadoop} . Una vez en el repositorio, el proyecto se puede obtener de dos formas, una es pulsando en el botón "Download ZIP" (situado en la columna de la derecha), y una vez descargado descomprimir el fichero, y la otra forma es clonar el repositorio con Git (crear un repositorio igual de forma local).
 
-Para clonar el repositorio con Git se debe tener instalada esta herramienta en el sistema \cite{instalacion_git} o utilizar un entorno de desarrollo como Eclipse, el cual la trae incluida. 
+Para clonar el repositorio con Git se debe tener instalada esta herramienta en el sistema \cite{instalacion_git} o utilizar un entorno de desarrollo como Eclipse el cual la trae incluida. 
 
 Para clonarlo desde un entorno de desarrollo como Eclipse \cite{eclipse} el procedimiento suele ser el de importar un proyecto pero con la diferencia de que se debe indicar que la fuente es un repositorio Git, nos solicitar\'a el repositorio que queremos clonar y es ah\'i donde debemos escribir la URL del repositorio. Algo que debe ser aclarado es que esta operación crear\'a un repositorio local, no genera el proyecto en el entorno de desarrollo, lo cual se explica en la sección siguiente.
 
@@ -28,3 +26,8 @@ Si de otro modo, tenemos la herramienta instalada en el sistema, debemos en prim
 }
 
 Una vez clonado tendremos una copia idéntica del repositorio la cual contiene la \'ultima versi\'on del proyecto adem\'as de toda la información necesaria para que funcione el sistema de versionado utilizada por Git. 
+
+
+
+
+
