--- a/doc/manual-importar-a-ide.tex
+++ b/doc/manual-importar-a-ide.tex
@@ -2,7 +2,7 @@ Esta sección tiene como objetivo explicar el procedimiento para importar el pro
 
 En el apartado anterior se ha explicado como obtener el proyecto, pero lo obtenido es básicamente los ficheros de código fuente, no se incluyen proyectos de entornos de desarrollo ni ejecutables.
 
-Si acabamos de descargar/clonar el proyecto, no lo tendremos importado en nuestro entorno, para llevar a cabo esta operación tan solo debemos dirigirnos al menu de importación de proyectos, solucionar que es un proyecto Maven y seleccionar el directorio que contiene el proyecto. 
+Si acabamos de descargar/clonar el proyecto, no lo tendremos importado en nuestro entorno, para llevar a cabo esta operación tan solo debemos dirigirnos al men\'u de importación de proyectos, indicar que es un proyecto Maven y seleccionar el directorio que contiene el proyecto. 
 
 Otra opción, teniendo la herramienta Maven instalada en el sistema \cite{instalacion_maven}, es generar primero el proyecto del entorno de desarrollo y posteriormente importarlo como un proyecto normal. Para generar el proyecto del entorno de desarrollo debemos abrir una consola, dirigirnos al directorio donde se sitúa el proyecto y ejecutar el comando Maven correspondiente a nuestro entorno, por ejemplo para Eclipse debemos ejecutar el siguiente comando:
 
